# cargo-dequalify

./: Cargo.toml  README.md
src/: lib.rs  main.rs  rewrite.rs
src/cli/: fmt.rs  git.rs  mod.rs  walk.rs  workspace.rs
src/project/: mod.rs  walk.rs  workspace.rs
src/rewrite/: attrs.rs  collect.rs  consts.rs  defs.rs  diff.rs  edits.rs  mod.rs  resolve.rs  source.rs  use_tree.rs
tests/: integration.rs
