[package]
name = "dequalify"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
syn = { version = "2", features = ["full", "visit-mut", "extra-traits"] }
quote = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }

[dev-dependencies]
tempfile = "3"
