[package]
name = "cargo-dequalify"
version = "0.16.6"
edition = "2024"
description = "A Rust refactoring tool that rewrites fully-qualified function calls into imported short names"
license = "MIT"
repository = "https://github.com/0x6b/cargo-dequalify"

[dependencies]
anyhow = "1.0"
rayon = "1.12"
clap = { version = "4.6", features = ["derive", "wrap_help"] }
similar = "3.1"
syn = { version = "2.0", features = ["full", "visit", "visit-mut"] }
ignore = "0.4"
toml = "1.1"
serde = { version = "1.0", features = ["derive"] }
dunce = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"], default-features = false }
quote = "1.0"
gix = { version = "0.84", default-features = false, features = ["status", "sha1"] }
glob = "0.3"

[dev-dependencies]
tempfile = "3.27"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
